[build-system]
requires = ["setuptools>=43.0.0", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "pymyo"
description = "Cross-platform Python API to configure or retrieve data from a Thalmic Labs Myo armband through BLE"
authors = [{ name = "Crimson-Crow", email = "github@crimsoncrow.dev" }]
maintainers = [{ name = "Crimson-Crow", email = "github@crimsoncrow.dev" }]
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE.txt" }
keywords = ["myo", "armband", "bluetooth", "BLE"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Framework :: AsyncIO",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: Microsoft :: Windows :: Windows 10",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: Android",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Scientific/Engineering :: Human Machine Interfaces",
  "Typing :: Typed",
]
dependencies = [
  "async-property >= 0.2.2",
  'typing-extensions ~= 4.4; python_version < "3.11"',
  "bleak >= 0.21.1",
]
dynamic = ["version"]

[project.urls]
"Homepage" = "https://github.com/Crimson-Crow/pymyo"
"Bug Reports" = "https://github.com/Crimson-Crow/pymyo/issues"
"Source" = "https://github.com/Crimson-Crow/pymyo"

[tool.setuptools.dynamic]
version = {attr = "pymyo.__version__"}

[tool.ruff]
target-version = "py38"

[tool.ruff.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.8"
